--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
+# when the API and APP running on different network
 PUBLIC_API_BASE_URL=http://122.160.175.36:1000/SocietyApi
+# when the API and APP running in the same wifi
 PRIVATE_API_BASE_URL=http://192.168.1.101:1000/SocietyApi
+# when the API is running for development
+LOCAL_API_BASE_URL=http://10.0.2.2:5122
 
+ 
