--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
    <application
-        android:label="Jain Directory"
+        android:label="Directory"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
