--- a/.env
+++ b/.env
@@ -5,4 +5,6 @@ PRIVATE_API_BASE_URL=http://192.168.1.101:1000/SocietyApi
 # when the API is running for development
 LOCAL_API_BASE_URL=http://10.0.2.2:5122
 
+APP_VERSION=1
+
  
